# tmux-claude-watcher

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
latest/: tc-watcher
src/: lib.rs  main.rs  return_key.rs  theme.rs  tmux.rs
src/tmux/: cmds.rs  mod.rs  pane.rs  pane_actions.rs  pane_manager.rs  pane_manager_tests.rs  pane_tests.rs  ui.rs
src/tmux/pane/: claude.rs  shell.rs  tc_watcher.rs  tests.rs
src/tmux/ui/: constants.rs  footer.rs  help.rs  name_prompt.rs  picker.rs  table.rs  tests.rs
tests/: e2e.rs
