[package]
name = "tmux-claude-watcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tc-watcher"
path = "src/main.rs"

[dependencies]
ratatui           = "0.30.0"
crossterm         = { version = "0.29.0", features = ["event-stream"] }
tokio             = { version = "1", features = ["full"] }
strum             = { version = "0.28", features = ["derive"] }
futures           = "0.3"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender  = "0.2"
